--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -97,7 +97,7 @@
 
 .center::before,
 .center::after {
-  content: '';
+  content: "";
   left: 50%;
   position: absolute;
   filter: blur(45px);
@@ -125,7 +125,7 @@
 
 .thirteen::before,
 .thirteen::after {
-  content: '';
+  content: "";
   position: absolute;
   z-index: -1;
 }
@@ -275,4 +275,17 @@
   to {
     transform: rotate(0deg);
   }
+}
+
+.content {
+  margin-top: 80ps;
+  padding: 12px;
+  border-radius: 50;
+  text-align: center;
+  width: 100%;
+}
+
+.content pre {
+  margin: auto;
+  width: 100%;
 }
